--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,6 +10,9 @@ jobs:
   tagged-release:
     name: "Tagged Release"
     runs-on: "ubuntu-latest"
+    outputs:
+      upload_url: ${{ steps.release.outputs.upload_url }}
+      tag: ${{ steps.release.outputs.automatic_releases_tag }}
     steps:
       - uses: actions/checkout@v3
       - name: Set up Go
@@ -24,6 +27,7 @@ jobs:
         run: make commit
       - name: Automatic Releases
         uses: marvinpinto/action-automatic-releases@v1.2.1
+        id: release
         with:
           repo_token: "${{ secrets.GITHUB_TOKEN }}"
           prerelease: false
@@ -31,3 +35,31 @@ jobs:
             LICENSE.md
             target/*.gz
             target/*.sha256
+  build-image:
+    runs-on: "ubuntu-latest"
+    needs: tagged-release
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4.2.2
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3.11.1
+
+      - name: Login to GHCR
+        uses: docker/login-action@v3.5.0
+        with:
+          registry: "ghcr.io"
+          username: "${{ github.actor }}"
+          password: "${{ secrets.GITHUB_TOKEN }}"
+
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v6.18.0
+        with:
+          context: .
+          file: Dockerfile
+          push: true
+          tags: |
+            ghcr.io/${{ github.repository_owner }}/openldap_exporter:latest
+            ghcr.io/${{ github.repository_owner }}/openldap_exporter:${{ needs.tagged-release.outputs.tag }}
+          build-args: |
+            URL=${{ needs.tagged-release.outputs.upload_url }}
